# PyDGN

./: .coveragerc  .gitignore  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Convert_gnn_compaison_splits.ipynb  LICENSE  Launch_Experiments.py  PrepareDatasets.py  README.md  THANKS.md  build_dataset.py  cluster_slurm_example.sh  conf.py  config_DATA.yml  config_IncrementalDGN.yml  config_LinkPredToyDGN.yml  config_NCI1_example.yml  config_PubMed.yml  config_SemiSupToyDGN.yml  config_SemisupervisedDGN.yml  config_SupToyDGN.yml  config_SupervisedDGN.yml  create_environment.sh  dynamic_dataset.py  dynamic_engine.py  dynamic_engine_callback.py  dynamic_provider.py  dynamic_splitter.py  launch_experiment.py  paper.bib  paper.md  pyproject.toml  requirements.txt  requirements_torch_geometric.txt  setup.cfg  setup.py  static.py  telegram_config.yml  (+2 more)
.github/: requirements.txt  requirements.txt:Zone.Identifier  requirements_torch_geometric.txt
CONFIGS/: config_Cora.yml  config_IncrementalDGN.yml  config_KarateClub.yml  config_LinkPredToyDGN.yml  config_PROTEINS.yml  config_PubMed.yml  config_SemiSupToyDGN.yml  config_SupToyDGN.yml
DATA_CONFIGS/: config_Cora.yml  config_KarateClub.yml  config_PROTEINS.yml  config_PubMed.yml  config_chickenpox.yml  config_infectious_ct1.yml
MODEL_CONFIGS/: config_CGMM.yml  config_CGMM_Classifier.yml  config_CGMM_Embedding.yml  config_ECGMM_Classifier.yml  config_ECGMM_Embedding.yml  config_LinkPredToyDGN.yml  config_SemiSupToyDGN.yml  config_SupToyDGN.yml  config_SupToyDGNTemporal_MultipleGraphSequence.yml  config_SupToyDGNTemporal_SingleGraphSequence.yml  config_SupToyDGN_RandomSearch.yml  config_SupToyDGN_Temporal.yml
config/: base.py
data/: dataset.py  provider.py  splitter.py  util.py
datasets/: datasets.py  provider.py  sampler.py  splitter.py  transforms.py  utils.py
docs/: conf.py  example.rst  index.rst  intro.rst  requirements.txt  requirements_old.txt  (+1 more)
(+338 files in other folders)
