[metadata]
name = PyDGN
version = 1.0.0
author = Federico Errica
author_email = f.errica@protonmail.com
description = A Python Package for Deep Graph Networks
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/diningphil/PyDGN
project_urls =
    Bug Tracker = https://github.com/diningphil/PyDGN/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: POSIX :: Linux

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    PyYAML >=5.4
    networkx >=2.3
    requests >=2.22.0
    matplotlib >=3.3.4
    seaborn >=0.9.0
    tensorboard >=2.1.1
    tqdm >=4.47.0
    ogb >= 1.3.3
    aioredis >=1.3.1
    ray >=1.5.2
    gpustat >=0.6.0
    torch_geometric_temporal >=0.40


[options.packages.find]
where = src
